--- a/KMITL Cinema/nbproject/project.properties
+++ b/KMITL Cinema/nbproject/project.properties
@@ -30,12 +30,20 @@ dist.jar=${dist.dir}/KMITL Cinema.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.fontawesomefx-commons-8.15.jar=C:\\Users\\Phijak\\Documents\\GitHub\\fontawesomefx-commons-8.15.jar
+file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=C:\\Users\\Phijak\\Documents\\GitHub\\fontawesomefx-materialdesignfont-1.7.22-4.jar
+file.reference.jfoenix-8.0.7.jar=C:\\Users\\Phijak\\Documents\\GitHub\\jfoenix-8.0.7.jar
+file.reference.objectdb.jar=C:\\Users\\Phijak\\Documents\\GitHub\\objectdb.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.fontawesomefx-commons-8.15.jar}:\
+    ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar}:\
+    ${file.reference.jfoenix-8.0.7.jar}:\
+    ${file.reference.objectdb.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +86,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=kmitl.cinema.KMITLCinema
+javafx.main.class=cinema.ui.auth.LoginLoader
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
