--- a/KMITL Cinema/nbproject/project.properties
+++ b/KMITL Cinema/nbproject/project.properties
@@ -31,9 +31,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.fontawesomefx-commons-8.15.jar=C:\\Users\\Phijak\\Documents\\GitHub\\fontawesomefx-commons-8.15.jar
+file.reference.fontawesomefx-commons-8.15.jar-1=lib\\fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=C:\\Users\\Phijak\\Documents\\GitHub\\fontawesomefx-materialdesignfont-1.7.22-4.jar
+file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar-1=lib\\fontawesomefx-materialdesignfont-1.7.22-4.jar
 file.reference.jfoenix-8.0.7.jar=C:\\Users\\Phijak\\Documents\\GitHub\\jfoenix-8.0.7.jar
+file.reference.jfoenix-8.0.7.jar-1=lib\\jfoenix-8.0.7.jar
 file.reference.objectdb.jar=C:\\Users\\Phijak\\Documents\\GitHub\\objectdb.jar
+file.reference.objectdb.jar-1=C:\\Users\\pisit\\Desktop\\GitProjects\\Cinema-CMD\\dist\\lib\\objectdb.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -43,7 +47,11 @@ javac.classpath=\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
     ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar}:\
     ${file.reference.jfoenix-8.0.7.jar}:\
-    ${file.reference.objectdb.jar}
+    ${file.reference.objectdb.jar}:\
+    ${file.reference.objectdb.jar-1}:\
+    ${file.reference.fontawesomefx-commons-8.15.jar-1}:\
+    ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar-1}:\
+    ${file.reference.jfoenix-8.0.7.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
