--- a/KMITL Cinema/nbproject/project.properties
+++ b/KMITL Cinema/nbproject/project.properties
@@ -49,9 +49,9 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.7.jar}:\
     ${file.reference.objectdb.jar}:\
     ${file.reference.objectdb.jar-1}:\
-    ${file.reference.fontawesomefx-commons-8.15.jar-1}:\
     ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar-1}:\
-    ${file.reference.jfoenix-8.0.7.jar-1}
+    ${file.reference.jfoenix-8.0.7.jar-1}:\
+    ${file.reference.fontawesomefx-commons-8.15.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
