--- a/KMITL Cinema/nbproject/project.properties
+++ b/KMITL Cinema/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,13 +29,9 @@ dist.jar=${dist.dir}/KMITL Cinema.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.fontawesomefx-commons-8.15.jar=C:\\Users\\Phijak\\Documents\\GitHub\\fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-commons-8.15.jar-1=lib\\fontawesomefx-commons-8.15.jar
-file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar=C:\\Users\\Phijak\\Documents\\GitHub\\fontawesomefx-materialdesignfont-1.7.22-4.jar
 file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar-1=lib\\fontawesomefx-materialdesignfont-1.7.22-4.jar
-file.reference.jfoenix-8.0.7.jar=C:\\Users\\Phijak\\Documents\\GitHub\\jfoenix-8.0.7.jar
 file.reference.jfoenix-8.0.7.jar-1=lib\\jfoenix-8.0.7.jar
-file.reference.objectdb.jar=C:\\Users\\Phijak\\Documents\\GitHub\\objectdb.jar
 file.reference.objectdb.jar-1=C:\\Users\\pisit\\Desktop\\GitProjects\\Cinema-CMD\\dist\\lib\\objectdb.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -44,10 +39,6 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.fontawesomefx-commons-8.15.jar}:\
-    ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar}:\
-    ${file.reference.jfoenix-8.0.7.jar}:\
-    ${file.reference.objectdb.jar}:\
     ${file.reference.objectdb.jar-1}:\
     ${file.reference.fontawesomefx-materialdesignfont-1.7.22-4.jar-1}:\
     ${file.reference.jfoenix-8.0.7.jar-1}:\
@@ -55,6 +46,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -116,6 +108,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
